add item list in vending_machine section

--- a/index.html
+++ b/index.html
@@ -14,10 +14,52 @@
 
 <body>
     <div id="app">
-        <h1 class="tit-app txt-hide">Cola Cola</h1>
+        <h1 class="tit-app ir">Cola Cola</h1>
         <section class="vending-machine">
-            <h2 class="txt-hide">vending machine display</h2>
+            <h2 class="ir">vending machine display</h2>
             <ul class="list-item">
+                <li class="click-on">
+                    <button type="button" class="btn-item">
+                        <img class="img-item" src="./images/Original_Cola.png" alt="">
+                        <strong class="tit-item">Original_Cola</strong>
+                        <span class="txt-price">1000원</span>
+                    </button>
+                </li>
+                <li class="sold-out">
+                    <button type="button" class="btn-item">
+                        <img class="img-item" src="./images/Violet_Cola.png" alt="">
+                        <strong class="tit-item">Violet_Cola</strong>
+                        <span class="txt-price">1000원</span>
+                    </button>
+                </li>
+                <li>
+                    <button type="button" class="btn-item">
+                        <img class="img-item" src="./images/Yellow_Cola.png" alt="">
+                        <strong class="tit-item">Yellow_Cola</strong>
+                        <span class="txt-price">1000원</span>
+                    </button>
+                </li>
+                <li>
+                    <button type="button" class="btn-item">
+                        <img class="img-item" src="./images/Cool_Cola.png" alt="">
+                        <strong class="tit-item">Cool_Cola</strong>
+                        <span class="txt-price">1000원</span>
+                    </button>
+                </li>
+                <li class="click-on">
+                    <button type="button" class="btn-item">
+                        <img class="img-item" src="./images/Green_Cola.png" alt="">
+                        <strong class="tit-item">Green_Cola</strong>
+                        <span class="txt-price">1000원</span>
+                    </button>
+                </li>
+                <li>
+                    <button type="button" class="btn-item">
+                        <img class="img-item" src="./images/Orange_Cola.png" alt="">
+                        <strong class="tit-item">Orange_Cola</strong>
+                        <span class="txt-price">1000원</span>
+                    </button>
+                </li>
             </ul>
             <div class="balance-return">
                 <div class="info-balance">
@@ -37,7 +79,7 @@
         </section>
 
         <section class="info-mine">
-            <h2 class="txt-hide">my information</h2>
+            <h2 class="ir">my information</h2>
             <div class="money-mine">
                 <div class="info-money">
                     <span class="txt-money"></span>
