add lists in ul tag

--- a/index.html
+++ b/index.html
@@ -63,7 +63,8 @@
             </ul>
             <div class="balance-return">
                 <div class="info-balance">
-                    <span class="txt-balance"></span>
+                    잔액 :
+                    <span class="txt-balance">1,000</span>
                 </div>
                 <button type="button" class="btn-return">거스름돈 반환</button>
             </div>
@@ -73,6 +74,34 @@
             </div>
             <div class="item-get">
                 <ul class="list-item-staged">
+                    <li>
+                        <button type="button" class="btn-staged" data-item="Original Cola">
+                            <img src="../images/Original_Cola.png" alt="" class="img-item">
+                            <strong class="txt-item">Original Cola</strong>
+                            <span class="num-counter">1</span>
+                        </button>
+                    </li>
+                    <li>
+                        <button type="button" class="btn-staged" data-item="Original Cola">
+                            <img src="../images/Green_Cola.png" alt="" class="img-item">
+                            <strong class="txt-item">Green Cola</strong>
+                            <span class="num-counter">2</span>
+                        </button>
+                    </li>
+                    <li>
+                        <button type="button" class="btn-staged" data-item="Original Cola">
+                            <img src="../images/Orange_Cola.png" alt="" class="img-item">
+                            <strong class="txt-item">Orange Cola</strong>
+                            <span class="num-counter">1</span>
+                        </button>
+                    </li>
+                    <li>
+                        <button type="button" class="btn-staged" data-item="Original Cola">
+                            <img src="../images/Violet_Cola.png" alt="" class="img-item">
+                            <strong class="txt-item">Violet Cola</strong>
+                            <span class="num-counter">5</span>
+                        </button>
+                    </li>
                 </ul>
                 <button type="button" class="btn-get">획득</button>
             </div>
@@ -82,11 +111,33 @@
             <h2 class="ir">my information</h2>
             <div class="money-mine">
                 <div class="info-money">
-                    <span class="txt-money"></span>
+                    소지금 :
+                    <span class="txt-money">25,000</span>
                 </div>
             </div>
             <div class="items-mine">
+                <strong class="tit-item">획득한 음료</strong>
                 <ul class="list-item-staged">
+                    <li>
+                        <img src="../images/Original_Cola.png" alt="" class="img-item">
+                        <strong class="txt-item">Original_Cola</strong>
+                        <span class="num-counter">1</span>
+                    </li>
+                    <li>
+                        <img src="../images/Green_Cola.png" alt="" class="img-item">
+                        <strong class="txt-item">Green Cola</strong>
+                        <span class="num-counter">2</span>
+                    </li>
+                    <li>
+                        <img src="../images/Orange_Cola.png" alt="" class="img-item">
+                        <strong class="txt-item">Orange Cola</strong>
+                        <span class="num-counter">1</span>
+                    </li>
+                    <li>
+                        <img src="../images/Violet_Cola.png" alt="" class="img-item">
+                        <strong class="txt-item">Violet Cola</strong>
+                        <span class="num-counter">5</span>
+                    </li>
                 </ul>
                 <span class="txt-total">총금액 : 9,000원</span>
             </div>
