add psuedo element on txt-total class

--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
                         <span class="num-counter">5</span>
                     </li>
                 </ul>
-                <span class="txt-total">총금액 : 9,000원</span>
+                <span class="txt-total">총금액 : 9,000</span>
             </div>
         </section>
     </div>
